<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_TempSave_Cmd" Id="{72a558b1-da1d-4c9b-9f4c-abb79eab0c55}">
    <Declaration><![CDATA[TYPE ST_TempSave_Cmd :
STRUCT
	bSavePparams									: BOOL;
	bSaveMparams									: BOOL;
	bSaveSupplyParams								: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>